monitoring/grafana-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-stripprefix
  namespace: my-grafana
spec:
  stripPrefix:
    prefixes:
      - /grafana
